# ai-dev-swarm

./: AzuriteConfig  README.md  USER-MANUAL.md  __azurite_db_table__.json  ideas.md  notes.md
.claude/commands/: backlog.md  dev.md  review.md  stage.md  test.md
.gemini/: settings.json
00-init-ideas/: README.md  cost-budget.md  owner-requirement.md  problem-statement.md  target-users.md  value-proposition.md
01-market-research/: README.md  competitor-analysis.md  gap-analysis.md  market-overview.md  pricing-research.md  validation-findings.md
02-personas/: README.md
03-mvp/: README.md
04-prd/: README.md  functional-requirements.md  non-functional-requirements.md  out-of-scope.md  prd.md
05-ux/: README.md
06-architecture/: README.md
07-tech-specs/: README.md  coding-standards.md  security-standards.md  security.md  tech-stack.md  testing-standards.md  theme-standards.md
08-devops/: README.md  github-setup.md  mcp-setup.md  vscode-devcontainer.md
09-sprints/: README.md
10-deployment/: README.md
dev-swarms/dev-skills/: background-process.md  development-cycle.md  mcp-server.md  mermaid.md  nodejs.md  project-achive.md  project-init.md  screen_stream.md  use-computer.md
dev-swarms/docs/: repository-structure.md  source-code-structure.md
dev-swarms/py_scripts/: pyproject.toml  screen_stream.py  use_computer.py
dev-swarms/skills/dev-swarms-architecture/: SKILL.md
dev-swarms/skills/dev-swarms-background-process/: SKILL.md
dev-swarms/skills/dev-swarms-code-development/: SKILL.md
dev-swarms/skills/dev-swarms-ux/: SKILL.md
features/: README.md
(+20 files in other folders)
